--- a/src/main/resources/templates/failed_page.html
+++ b/src/main/resources/templates/failed_page.html
@@ -12,5 +12,8 @@
 			<button>Register</button>
 		</a>
 	</p>
+	
+	
+	<img src="sample.jpg" th:src="${'data:image/png;base64,' + image1}"/>
 </body>
 </html>
