--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,34 +2,97 @@
 <html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
 <title>Login</title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+	font-family: Arial, Helvetica, sans-serif;
+	background-color: black;
+}
+
+* {
+	box-sizing: border-box;
+}
+
+/* Add padding to containers */
+.container {
+	padding: 16px;
+	background-color: white;
+}
+
+/* Full-width input fields */
+input[type=text], input[type=password] {
+	width: 100%;
+	padding: 15px;
+	margin: 5px 0 22px 0;
+	display: inline-block;
+	border: none;
+	background: #f1f1f1;
+}
+
+input[type=text]:focus, input[type=password]:focus {
+	background-color: #ddd;
+	outline: none;
+}
+
+/* Overwrite default styles of hr */
+hr {
+	border: 1px solid #f1f1f1;
+	margin-bottom: 25px;
+}
+
+/* Set a style for the submit button */
+.registerbtn {
+	background-color: #4CAF50;
+	color: white;
+	padding: 16px 20px;
+	margin: 8px 0;
+	border: none;
+	cursor: pointer;
+	width: 100%;
+	opacity: 0.9;
+}
+
+.registerbtn:hover {
+	opacity: 1;
+}
+
+/* Add a blue text color to links */
+a {
+	color: dodgerblue;
+}
+
+/* Set a grey background color and center the text of the "sign in" section */
+.signin {
+	background-color: #f1f1f1;
+	text-align: center;
+}
+</style>
+
 </head>
 <body>
-	<h1 align="center">User Login</h1>
-	<div>
-		<form action="#" th:action="@{/}" th:object="${loginUser}" method="post">
-			<table align="center">
-				<tr>
-					<td><label for="username">User Name</label></td>
-					<td><input type="text" name="username" th:field="*{userName}"></input></td>
-				</tr>
-				<tr>
-					<td><label for="password">Password</label></td>
-					<td><input type="password" name="password" th:field="*{password}"></input></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td><input type="submit" value="Login"></input></td>
-				</tr>
-			</table>
-		</form>
-		<br>
-		<p align="center">
-			Have no account yet? 
-			<a href="/register">
-				<button>Register</button>
-			</a>
-		</p>
 
-	</div>
+	<form action="#" th:action="@{/loginSubmission}" th:object="${loginUser}" method="post">
+		<div class="container">
+			<h1>Login</h1>
+			<hr>
+
+			<label for="userName"><b>User name</b></label> 
+			<input type="text" placeholder="Enter User name" name="userName" th:field="*{userName}"
+				required> <label for="password"><b>Password</b></label>
+			<input type="password" placeholder="Enter Password" name="password" th:field="*{password}" required>
+			<hr>
+
+			<button type="submit" class="registerbtn">Sign in</button>
+		</div>
+
+		<div class="container signin">
+			<p>
+				Have no account yet? <a href="/register">Register</a>.
+			</p>
+		</div>
+	</form>
+
+
 </body>
 </html>
