--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
+<title>register</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
@@ -76,15 +77,14 @@ a {
     <hr>
 
     <label for="userName"><b>User name</b></label>
-    <input type="text" placeholder="Enter User name" name="userName" id="userName" th:field="*{userName}" required>
+    <input type="text" placeholder="Enter User name" name="userName" th:field="*{userName}" required>
 
     <label for="password"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="password" id="password" th:field="*{password}" required>
+    <input type="password" placeholder="Enter Password" name="password" th:field="*{password}" required>
 
     <label for="password-repeat"><b>Repeat Password</b></label>
-    <input type="password" placeholder="Repeat Password" name="password-repeat" id="password-repeat" required>
+    <input type="password" placeholder="Repeat Password" name="password-repeat" required>
     <hr>
-    <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
 
     <button type="submit" class="registerbtn">Register</button>
   </div>
